fixed spacing

--- a/scss/resume.scss
+++ b/scss/resume.scss
@@ -9,7 +9,7 @@
 
 	border-bottom: 1px solid #ddd;
 	&:first-of-type {
-		padding-top: 0;
+		padding-top: 24px;
 	}
 	&:last-child {
 		border-bottom: none;
